--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -270,22 +270,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(623091, 35)"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2eba3df3d68>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABJMAAAEyCAYAAABOC5FoAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAFWBJREFUeJzt3X+MpVd93/HPN97i/FL8c02MF2eR\nbBQtCTLhyoQmVd06NrZUsjRxFLs02SZUDlEcNUVVY4QqJwappiVyiqCoK0B23QibICE2IanrmJCq\nkUM9SyjEBNiNA/HGFl6zFqprFezw7R/zTDyezu6e9b2zsz9eL2k09znPuXfO/HHmzr73uXequwMA\nAAAAI75tsxcAAAAAwMlDTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAM\nE5MAAAAAGCYmAQAAADBsy2Yv4IU4//zze/v27Zu9DAAAAIBTxt69e5/o7q1Hm3dSxqTt27dnaWlp\ns5cBAAAAcMqoqq+MzPMyNwAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAw\nMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAw\nMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAw\nMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAw\nMQkAAACAYWISAAAAAMMWEpOq6pqq+mJV7a+qm9c5f2ZV3TOd/1RVbV9z/uKqeqqq/tUi1gMAAADA\nxpg7JlXVGUnem+TaJDuS3FBVO9ZMe1OSJ7v7kiS3J3nnmvO3J/n9edcCAAAAwMZaxJVJlyfZ390P\nd/c3k9ydZOeaOTuT3Dnd/kiSK6uqkqSq3pDk4SQPLWAtAAAAAGygRcSki5I8sur4wDS27pzufjbJ\n15OcV1XfleRXk/z60b5IVd1YVUtVtXTw4MEFLBsAAACAY7WImFTrjPXgnF9Pcnt3P3W0L9Ldu7t7\n1t2zrVu3voBlAgAAADCvLQt4jANJXrrqeFuSRw8z50BVbUlyVpJDSV6T5Lqq+ndJzk7yrar6v939\nngWsCwAAAIAFW0RMejDJpVX1siR/neT6JP9kzZw9SXYleSDJdUk+0d2d5O+tTKiqX0vylJAEAAAA\ncOKaOyZ197NVdVOSe5OckeSD3f1QVd2aZKm79yT5QJK7qmp/lq9Iun7erwsAAADA8VfLFwidXGaz\nWS8tLW32MgAAAABOGVW1t7tnR5u3iDfgBgAAAOA0ISYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAA\ngGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAA\ngGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAA\ngGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAA\ngGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAA\ngGFiEgAAAADDxCQAAAAAholJAAAAAAxbSEyqqmuq6otVtb+qbl7n/JlVdc90/lNVtX0av6qq9lbV\n56bP/3AR6wEAAABgY8wdk6rqjCTvTXJtkh1JbqiqHWumvSnJk919SZLbk7xzGn8iyeu7+weT7Epy\n17zrAQAAAGDjLOLKpMuT7O/uh7v7m0nuTrJzzZydSe6cbn8kyZVVVd39p9396DT+UJJvr6ozF7Am\nAAAAADbAImLSRUkeWXV8YBpbd053P5vk60nOWzPnJ5P8aXd/Y70vUlU3VtVSVS0dPHhwAcsGAAAA\n4FgtIibVOmN9LHOq6hVZfunbLxzui3T37u6edfds69atL2ihAAAAAMxnETHpQJKXrjreluTRw82p\nqi1JzkpyaDreluSjSX62u/9iAesBAAAAYIMsIiY9mOTSqnpZVb0oyfVJ9qyZsyfLb7CdJNcl+UR3\nd1WdneTjSd7a3X+8gLUAAAAAsIHmjknTeyDdlOTeJH+e5MPd/VBV3VpVPz5N+0CS86pqf5K3JLl5\nGr8pySVJ/k1VfWb6uGDeNQEAAACwMap77dsbnfhms1kvLS1t9jIAAAAAThlVtbe7Z0ebt4iXuQEA\nAABwmhCTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkA\nAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkA\nAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkA\nAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkA\nAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkA\nAAAADFtITKqqa6rqi1W1v6puXuf8mVV1z3T+U1W1fdW5t07jX6yq1y1iPQAAAABsjLljUlWdkeS9\nSa5NsiPJDVW1Y820NyV5srsvSXJ7kndO992R5Pokr0hyTZL/OD0eAAAAACegLQt4jMuT7O/uh5Ok\nqu5OsjPJ51fN2Znk16bbH0nynqqqafzu7v5Gkr+sqv3T4z1wpC/48MH/k5/+T0ecAgAAAMAGWMTL\n3C5K8siq4wPT2LpzuvvZJF9Pct7gfZMkVXVjVS1V1dIzzzyzgGUDAAAAcKwWcWVSrTPWg3NG7rs8\n2L07ye4kmc1mfc8vvPZY1ggAAADAEXz4zWPzFnFl0oEkL111vC3Jo4ebU1VbkpyV5NDgfQEAAAA4\nQSwiJj2Y5NKqellVvSjLb6i9Z82cPUl2TbevS/KJ7u5p/Prpr729LMmlSf7nAtYEAAAAwAaY+2Vu\n3f1sVd2U5N4kZyT5YHc/VFW3Jlnq7j1JPpDkrukNtg9lOThlmvfhLL9Z97NJfqm7/2beNQEAAACw\nMWr5AqGTy2w266Wlpc1eBgAAAMApo6r2dvfsaPMW8TI3AAAAAE4TYhIAAAAAw8QkAAAAAIaJSQAA\nAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAA\nAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAA\nAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAA\nAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAA\nAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwLC5YlJVnVtV91XVvunzOYeZt2uas6+qdk1j\n31lVH6+qL1TVQ1V12zxrAQAAAGDjzXtl0s1J7u/uS5PcPx0/T1Wdm+SWJK9JcnmSW1ZFp3d19/cn\neVWSH6mqa+dcDwAAAAAbaN6YtDPJndPtO5O8YZ05r0tyX3cf6u4nk9yX5Jrufrq7/zBJuvubST6d\nZNuc6wEAAABgA80bk17c3Y8lyfT5gnXmXJTkkVXHB6axv1VVZyd5fZavblpXVd1YVUtVtXTw4ME5\nlw0AAADAC7HlaBOq6g+SfO86p942+DVqnbFe9fhbknwoybu7++HDPUh3706yO0lms1kfbh4AAAAA\nG+eoMam7f+xw56rqq1V1YXc/VlUXJnl8nWkHklyx6nhbkk+uOt6dZF93/+bQigEAAADYNPO+zG1P\nkl3T7V1JPrbOnHuTXF1V50xvvH31NJaqekeSs5L8ypzrAAAAAOA4mDcm3Zbkqqral+Sq6ThVNauq\n9ydJdx9K8vYkD04ft3b3oaraluWXyu1I8umq+kxV/fM51wMAAADABqruk+/th2azWS8tLW32MgAA\nAABOGVW1t7tnR5s375VJAAAAAJxGxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCY\nmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCY\nmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCY\nmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCY\nmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCY\nmAQAAADAMDEJAAAAgGFzxaSqOreq7quqfdPncw4zb9c0Z19V7Vrn/J6q+rN51gIAAADAxpv3yqSb\nk9zf3ZcmuX86fp6qOjfJLUlek+TyJLesjk5V9RNJnppzHQAAAAAcB/PGpJ1J7pxu35nkDevMeV2S\n+7r7UHc/meS+JNckSVV9d5K3JHnHnOsAAAAA4DiYNya9uLsfS5Lp8wXrzLkoySOrjg9MY0ny9iS/\nkeTpOdcBAAAAwHGw5WgTquoPknzvOqfeNvg1ap2xrqrLklzS3f+yqrYPrOPGJDcmycUXXzz4pQEA\nAABYpKPGpO7+scOdq6qvVtWF3f1YVV2Y5PF1ph1IcsWq421JPpnktUleXVVfntZxQVV9sruvyDq6\ne3eS3Ukym836aOsGAAAAYPHmfZnbniQrf51tV5KPrTPn3iRXV9U50xtvX53k3u5+X3e/pLu3J/nR\nJF86XEgCAAAA4MQwb0y6LclVVbUvyVXTcapqVlXvT5LuPpTl90Z6cPq4dRoDAAAA4CRT3SffK8Zm\ns1kvLS1t9jIAAAAAThlVtbe7Z0ebN++VSQAAAACcRsQkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBh1d2bvYZjVlUHk3xls9dxgjg/yRObvQg4zdmHsLnsQdh8\n9iFsLnuQRfm+7t56tEknZUziOVW11N2zzV4HnM7sQ9hc9iBsPvsQNpc9yPHmZW4AAAAADBOTAAAA\nABgmJp38dm/2AgD7EDaZPQibzz6EzWUPclx5zyQAAAAAhrkyCQAAAIBhYhIAAAAAw8SkE0RVfbCq\nHq+qP1s19u+r6gtV9dmq+mhVnb3q3Cur6oGqeqiqPldV3z6Nv6iqdlfVl6b7/uQ0fmZV3VNV+6vq\nU1W1/Xh/j3AiW+AevGE6/mxV/deqOn8aP7eq7quqfdPnc47/dwkntmPZh1X1xqr6zKqPb1XVZdO5\nV0/7cH9Vvbuqahq3D+EIFrEHq+o7q+rj030eqqrbVj2W30fhCBb1PLjqvnvWPJbnQRZGTDpx3JHk\nmjVj9yX5ge5+ZZIvJXlrklTVliT/Jcmbu/sVSa5I8sx0n7cleby7X55kR5I/msbflOTJ7r4kye1J\n3rlh3wmcnO7InHtwGv8PSf7BdJ/PJrlpeqybk9zf3ZcmuX86Bp7vjgzuw+7+re6+rLsvS/IzSb7c\n3Z+Z7vO+JDcmuXT6WHlM+xCO7I4sZg++q7u/P8mrkvxIVV07jft9FI7sjixmD6aqfiLJU2sey/Mg\nCyMmnSC6+78nObRm7L9197PT4Z8k2TbdvjrJZ7v7f03zvtbdfzOd+/kk/3Ya/1Z3PzGN70xy53T7\nI0muXPmfWmBhe7Cmj++a9tf3JHl0us/qPXhnkjds1PcCJ6tj3Ier3ZDkQ0lSVRcm+Z7ufqCX/8rI\nf85z+80+hCNYxB7s7qe7+w+n299M8ulV9/H7KBzBIvZgklTVdyd5S5J3rJnneZCFEZNOHj+f5Pen\n2y9P0lV1b1V9uqr+dZKsegnO26fx366qF09jFyV5JEmmH0ZfT3Le8Vs+nPSOuge7+5kkv5jkc1mO\nSDuSfGC6z4u7+7Fp3mNJLjiei4dTxOp9uNpP57lfoi9KcmDVuQPTWGIfwrxG9uDfmn43fX2Wr4BI\n/D4K8xrdg29P8htJnl4zz/MgCyMmnQSq6m1Jnk3yW9PQliQ/muSN0+d/XFVXTuPbkvxxd/9QkgeS\nvGvlYdZ56N7IdcOpYnQPVtXfyXJMelWSl2T5ZW5vPf4rhlPPOvtwZfw1SZ7u7pX3hPB8BxvgGPbg\nyviWLP/j9t3d/fDK8DoPbX/CgNE9OL1v0iXd/dHjv0pOJ2LSCa6qdiX5R0neOF2unyz/L+sfdfcT\n3f10kt9L8kNJvpbl+rzyg+O3p/GV+7x0eswtSc7Kmksogf/fMe7By5Kku/9imvvhJH93us9Xp5ff\nrLwM5/Hj+G3ASe0w+3DF9Xn+/8YeyPNfArAtz73c1D6EF+AY9+CK3Un2dfdvrhrz+yi8AMe4B1+b\n5NVV9eUk/yPJy6vqk9M5z4MsjJh0Aquqa5L8apIfn/7BuuLeJK+c/lrGliR/P8nnpx8sv5PlNwNO\nkiuTfH66vSfJrun2dUk+sc4PImCVY92DSf46yY6q2jrNuyrJn0+3V+/BXUk+ttHrh1PBEfZhqurb\nkvxUkrtXxqbL9v93Vf3w9F4sP5vn9pt9CMfoWPfgNP6OLIeiX1nzcH4fhWP0Ap4H39fdL+nu7Vm+\ngv5L3X3FdNrzIAtTfn6fGKrqQ1mOQOcn+WqSW7L88pgzs3zFUZL8SXe/eZr/T6fzneT3unvlfZO+\nL8ldSc5OcjDJz3X3X9Xyny2/K8svvzmU5PpVlxzDaW+Be/DNSf5Flv/C4leS/LPu/lpVnZflK5Uu\nTvJXSX6qu/1vLKzyAvbhFUlu6+4fXvM4syz/RZzvyPJ7S/xyd7d9CEe2iD1YVduy/L5IX0jyjWn4\nPd39fr+PwpEt6nlw1eNtT/K73f0D07HnQRZGTAIAAABgmJe5AQAAADBMTAIAAABgmJgEAAAAwDAx\nCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAM+38bnnJ6GlzmzQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2eba3dca1d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "http.shape"
+    "http.iloc[12654:12754,3].plot(figsize=(20,5))"
    ]
   },
   {
@@ -677,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -688,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -699,7 +709,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "normal        95370\n",
+       "neptune.       1140\n",
+       "portsweep.       15\n",
+       "satan.           14\n",
+       "ipsweep.         13\n",
+       "nmap.             1\n",
+       "Name: normal, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smtp.iloc[:,-1].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normal = smtp[:100].reset_index(drop=True)\n",
+    "neptune = smtp[smtp.iloc[:,-1] ==\"neptune.\"].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2eba83d9208>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABJMAAAEyCAYAAABOC5FoAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAFQlJREFUeJzt3X+sX/d91/HXe3GTrh3kd7o0TnCm\nWAwPxDq+SjpWUNQ2aQLbXG1BpIBmjUzhj1XsBxOkTChrukktGmRM7SpZTUaoUNMqDGoxbZGXtgKh\nLeS6mVizLthkY/ESGlfOwkpFs7A3f3yP69u76/rjfL/X19f38ZCu7vd8zsf3+7F0T47zvOecW90d\nAAAAABjxDZu9AAAAAAC2DjEJAAAAgGFiEgAAAADDxCQAAAAAholJAAAAAAwTkwAAAAAYJiYBAAAA\nMExMAgAAAGCYmAQAAADAsB2bvYBX44orruhdu3Zt9jIAAAAAzhuHDh36Yndfebp5WzIm7dq1Kysr\nK5u9DAAAAIDzRlX9z5F5bnMDAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAA\nDBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAA\nDBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAA\nDBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAA\nDBOTAAAAABgmJgEAAAAwbCkxqapuq6qnq+pIVd2zzv6Lqurj0/7Hq2rXmv3XVdWXquonlrEeAAAA\nADbGwjGpqi5I8qEktyfZk+RdVbVnzbS7krzY3TckuT/JB9bsvz/Jryy6FgAAAAA21jKuTLoxyZHu\nfqa7X07ycJK9a+bsTfLQ9PqRJG+rqkqSqnpnkmeSPLWEtQAAAACwgZYRk65J8uyq7aPT2LpzuvuV\nJC8lubyqXp/knyR57+nepKrurqqVqlo5duzYEpYNAAAAwJlaRkyqdcZ6cM57k9zf3V863Zt09/7u\nnnX37Morr3wVywQAAABgUTuW8DWOJrl21fbOJM+dYs7RqtqR5OIkx5PclOSOqvrnSS5J8idV9X+7\n+4NLWBcAAAAAS7aMmPREkt1VdX2SP0hyZ5K/s2bOgST7kvx6kjuSfKq7O8lfOzGhqn4qyZeEJAAA\nAIBz18Ixqbtfqap3J3k0yQVJHuzup6rqviQr3X0gyQNJPlpVRzK/IunORd8XAAAAgLOv5hcIbS2z\n2axXVlY2exkAAAAA542qOtTds9PNW8YDuAEAAADYJsQkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIAAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAA\nADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhS4lJVXVbVT1dVUeq6p519l9UVR+f9j9eVbum8Vuq6lBV\n/db0+a3LWA8AAAAAG2PhmFRVFyT5UJLbk+xJ8q6q2rNm2l1JXuzuG5Lcn+QD0/gXk3xPd/+lJPuS\nfHTR9QAAAACwcZZxZdKNSY509zPd/XKSh5PsXTNnb5KHptePJHlbVVV3P9ndz03jTyV5bVVdtIQ1\nAQAAALABlhGTrkny7Krto9PYunO6+5UkLyW5fM2c70/yZHd/Zb03qaq7q2qlqlaOHTu2hGUDAAAA\ncKaWEZNqnbE+kzlV9W2Z3/r2D071Jt29v7tn3T278sorX9VCAQAAAFjMMmLS0STXrtremeS5U82p\nqh1JLk5yfNremeTfJ/mB7v4fS1gPAAAAABtkGTHpiSS7q+r6qrowyZ1JDqyZcyDzB2wnyR1JPtXd\nXVWXJPnlJO/p7v+yhLUAAAAAsIEWjknTM5DeneTRJJ9P8onufqqq7quq752mPZDk8qo6kuTHk9wz\njb87yQ1J/llV/eb0cdWiawIAAABgY1T32scbnftms1mvrKxs9jIAAAAAzhtVdai7Z6ebt4zb3AAA\nAADYJsQkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIA\nAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIA\nAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIA\nAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIA\nAAAAw8QkAAAAAIaJSQAAAAAME5MAAAAAGCYmAQAAADBMTAIAAABgmJgEAAAAwDAxCQAAAIBhYhIA\nAAAAw5YSk6rqtqp6uqqOVNU96+y/qKo+Pu1/vKp2rdr3nmn86ap6xzLWAwAAAMDGWDgmVdUFST6U\n5PYke5K8q6r2rJl2V5IXu/uGJPcn+cD0Z/ckuTPJtyW5LckvTF8PAAAAgHPQjiV8jRuTHOnuZ5Kk\nqh5OsjfJb6+aszfJT02vH0nywaqqafzh7v5Kkt+tqiPT1/v1r/eGf/z8U3nufWt7FWfTRTu+IZe/\n/sLNXgYAAABwli0jJl2T5NlV20eT3HSqOd39SlW9lOTyafw31vzZa9Z7k6q6O8ndSbL76j+TZ16z\newlL59W6+Btfk8vfePFmLwMAAABYmieHZi0jJtU6Yz04Z+TPzge79yfZnySz2azfcs8nz2SNAAAA\nAHxdDw7NWsYDuI8muXbV9s4kz51qTlXtSHJxkuODfxYAAACAc8QyYtITSXZX1fVVdWHmD9Q+sGbO\ngST7ptd3JPlUd/c0fuf0296uT7I7yX9dwpoAAAAA2AAL3+Y2PQPp3UkeTXJBkge7+6mqui/JSncf\nSPJAko9OD9g+nnlwyjTvE5k/rPuVJD/c3f9v0TUBAAAAsDFqfoHQ1jKbzXplZWWzlwEAAABw3qiq\nQ909O928ZdzmBgAAAMA2ISYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAA\nholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAA\nholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAA\nholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAA\nholJAAAAAAwTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAAgGFiEgAAAADDxCQAAAAA\nholJAAAAAAxbKCZV1WVVdbCqDk+fLz3FvH3TnMNVtW8ae11V/XJV/U5VPVVV719kLQAAAABsvEWv\nTLonyWPdvTvJY9P216iqy5Lcm+SmJDcmuXdVdPrZ7v7WJG9K8l1VdfuC6wEAAABgAy0ak/YmeWh6\n/VCSd64z5x1JDnb38e5+McnBJLd195e7+9NJ0t0vJ/lskp0LrgcAAACADbRoTHpDdz+fJNPnq9aZ\nc02SZ1dtH53GvqqqLknyPZlf3bSuqrq7qlaqauXYsWMLLhsAAACAV2PH6SZU1a8l+eZ1dv3k4HvU\nOmO96uvvSPKxJD/f3c+c6ot09/4k+5NkNpv1qeYBAAAAsHFOG5O6++2n2ldVX6iqq7v7+aq6OskL\n60w7muTmVds7k3xm1fb+JIe7++eGVgwAAADApln0NrcDSfZNr/cl+eQ6cx5NcmtVXTo9ePvWaSxV\n9dNJLk7yowuuAwAAAICzYNGY9P4kt1TV4SS3TNupqllVfSRJuvt4kvcleWL6uK+7j1fVzsxvlduT\n5LNV9ZtV9UMLrgcAAACADVTdW+/xQ7PZrFdWVjZ7GQAAAADnjao61N2z081b9MokAAAAALYRMQkA\nAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkA\nAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkA\nAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkA\nAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkA\nAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgmJgEAAAAwTEwCAAAAYNhCMamqLquqg1V1\nePp86Snm7ZvmHK6qfevsP1BVn1tkLQAAAABsvEWvTLonyWPdvTvJY9P216iqy5Lcm+SmJDcmuXd1\ndKqq70vypQXXAQAAAMBZsGhM2pvkoen1Q0neuc6cdyQ52N3Hu/vFJAeT3JYkVfVNSX48yU8vuA4A\nAAAAzoJFY9Ibuvv5JJk+X7XOnGuSPLtq++g0liTvS/Ivknx5wXUAAAAAcBbsON2Eqvq1JN+8zq6f\nHHyPWmesq+rbk9zQ3T9WVbsG1nF3kruT5Lrrrht8awAAAACW6bQxqbvffqp9VfWFqrq6u5+vqquT\nvLDOtKNJbl61vTPJZ5J8Z5K/UlW/N63jqqr6THffnHV09/4k+5NkNpv16dYNAAAAwPItepvbgSQn\nfjvbviSfXGfOo0lurapLpwdv35rk0e7+cHe/sbt3JXlLkv9+qpAEAAAAwLlh0Zj0/iS3VNXhJLdM\n26mqWVV9JEm6+3jmz0Z6Yvq4bxoDAAAAYIup7q13x9hsNuuVlZXNXgYAAADAeaOqDnX37HTzFr0y\nCQAAAIBtREwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgm\nJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgm\nJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABgm\nJgEAAAAwTEwCAAAAYJiYBAAAAMAwMQkAAACAYWISAAAAAMPEJAAAAACGiUkAAAAADBOTAAAAABhW\n3b3ZazhjVfVHSZ7e7HXAOeKKJF/c7EXAOcLxACc5HuAkxwOc5Hjg6/lz3X3l6SbtOBsr2QBPd/ds\nsxcB54KqWnE8wJzjAU5yPMBJjgc4yfHAMrjNDQAAAIBhYhIAAAAAw7ZqTNq/2QuAc4jjAU5yPMBJ\njgc4yfEAJzkeWNiWfAA3AAAAAJtjq16ZBAAAAMAmEJMAAAAAGLalYlJV3VZVT1fVkaq6Z7PXAxut\nqq6tqk9X1eer6qmq+pFp/LKqOlhVh6fPl07jVVU/Px0j/62qvmNz/wawfFV1QVU9WVX/cdq+vqoe\nn46Hj1fVhdP4RdP2kWn/rs1cNyxbVV1SVY9U1e9M54nvdH5gu6qqH5v+rfS5qvpYVb3W+YHtoqoe\nrKoXqupzq8bO+HxQVfum+Yerat9m/F3YOrZMTKqqC5J8KMntSfYkeVdV7dncVcGGeyXJP+ruv5Dk\nzUl+ePq+vyfJY929O8lj03YyPz52Tx93J/nw2V8ybLgfSfL5VdsfSHL/dDy8mOSuafyuJC929w1J\n7p/mwfnkXyX51e7+1iR/OfPjwvmBbaeqrknyD5PMuvsvJrkgyZ1xfmD7+NdJblszdkbng6q6LMm9\nSW5KcmOSe08EKFjPlolJmX9DH+nuZ7r75SQPJ9m7yWuCDdXdz3f3Z6fXf5T5/yhck/n3/kPTtIeS\nvHN6vTfJv+m530hySVVdfZaXDRumqnYm+ZtJPjJtV5K3JnlkmrL2eDhxnDyS5G3TfNjyqurPJvnr\nSR5Iku5+ubv/MM4PbF87knxjVe1I8rokz8f5gW2iu/9TkuNrhs/0fPCOJAe7+3h3v5jkYP50oIKv\n2kox6Zokz67aPjqNwbYwXYL9piSPJ3lDdz+fzINTkqumaY4Tznc/l+QfJ/mTafvyJH/Y3a9M26u/\n5796PEz7X5rmw/ngW5IcS/KL022fH6mq18f5gW2ou/8gyc8m+f3MI9JLSQ7F+YHt7UzPB84TnJGt\nFJPW+2lBn/VVwCaoqm9K8u+S/Gh3/++vN3WdMccJ54Wq+u4kL3T3odXD60ztgX2w1e1I8h1JPtzd\nb0ryf3LyFob1OB44b0234uxNcn2SNyZ5fea38qzl/ACn/v53XHBGtlJMOprk2lXbO5M8t0lrgbOm\nql6TeUj6t939S9PwF07cnjB9fmEad5xwPvuuJN9bVb+X+a3Ob838SqVLptsakq/9nv/q8TDtvzh/\n+hJw2KqOJjna3Y9P249kHpecH9iO3p7kd7v7WHf/cZJfSvJX4/zA9nam5wPnCc7IVopJTyTZPf1W\nhgszf6jegU1eE2yo6f79B5J8vrv/5apdB5Kc+A0L+5J8ctX4D0y/peHNSV46cXkrbHXd/Z7u3tnd\nuzI/B3yqu/9ukk8nuWOatvZ4OHGc3DHN9xM2zgvd/b+SPFtVf34aeluS347zA9vT7yd5c1W9bvq3\n04njwfmB7exMzwePJrm1qi6drva7dRqDddVW+u9mVf2NzH8KfUGSB7v7ZzZ5SbChquotSf5zkt/K\nyWfE/NPMn5v0iSTXZf4PqL/V3cenf0B9MPOH5X05yQ9298pZXzhssKq6OclPdPd3V9W3ZH6l0mVJ\nnkzy97r7K1X12iQfzfxZY8eT3Nndz2zWmmHZqurbM38Y/YVJnknyg5n/oND5gW2nqt6b5G9n/ptw\nn0zyQ5k/78X5gfNeVX0syc1Jrkjyhcx/K9t/yBmeD6rq72f+/xpJ8jPd/Ytn8+/B1rKlYhIAAAAA\nm2sr3eYGAAAAwCYTkwAAAAAYJiYBAAAAMExMAgAAAGCYmAQAAADAMDEJAAAAgGFiEgAAAADD/j+k\nbYFBI9vBpgAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2eba83598d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "normal.iloc[:,11].plot(figsize=(20,5))\n",
+    "neptune.iloc[:,11].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +785,7 @@
        "(1183, 35)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
