--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -698,10 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "smtp = pd.read_csv(f_smtp)"
@@ -709,8 +707,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -724,7 +724,7 @@
        "Name: normal, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "normal = smtp[:100].reset_index(drop=True)\n",
@@ -776,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -785,13 +787,45 @@
        "(1183, 35)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "smtp[smtp.iloc[:,-1]!=\"normal\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1da9d0ff390>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABIQAAAEyCAYAAACLeQv5AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAHmdJREFUeJzt3X2wHWd9H/Dvz3oxBoxtkAjUMrEb\nnCYOTYEqDi2dlDQUbP7ATYc09kwTmqFxm8ZpMkk7mLZDKEln8tKWTqY0qVsoIdPEOKRpNIyoIQ1M\n2g4Qi2IMsisiDIkVUywDcXgJyLKf/nH3uldX55x7rrRHV+c+n8/Mtc7Z8+jcZ3cfP7v67u7zVGst\nAAAAAPTjgq2uAAAAAADnlkAIAAAAoDMCIQAAAIDOCIQAAAAAOiMQAgAAAOiMQAgAAACgMwIhAAAA\ngM4IhAAAAAA6IxACAAAA6MzOrfrFe/bsaVdeeeVW/XoAAACAbefDH/7ww621vRuV27JA6Morr8yh\nQ4e26tcDAAAAbDtV9QfzlPPIGAAAAEBnBEIAAAAAnREIAQAAAHRGIAQAAADQGYEQAAAAQGcEQgAA\nAACdEQgBAAAAdGbDQKiq3lpVD1XVx6d8XlX1C1V1tKruqaoXjl9NAAAAAMYyzx1Cb0ty3YzPr09y\n9fBzc5JfPPtqAQAAALAoOzcq0Fr73aq6ckaRG5K8vbXWknywqi6tqme31j4zUh0BgCV2+MFHcs+x\nRyZ+9leeuydXPP3J57hGW++Tx7+U3/vU56d+/g17n5prr3r6OawRwPnvT088loMf+0xOPPb4aZ9d\n9uTdue55z9qCWrFoJ04+noMf+0z+9NHHkiTPeMruvOxb7OsxbBgIzeHyJA+seX9sWHZaIFRVN2fl\nLqI85znPGeFXAwDnu9f+xj35+B/9ycTPvvsFl+dN3/v8c1yjrffT77o37ztyfOrnlz15Vz7y+ped\nwxoBnP/ee99n8xO//tGpn//P135n9l3W30WG7e4D938uP/aOu09Z9sHXfVeedcmTtqhG28cYgVBN\nWNYmFWyt3ZbktiTZv3//xDIAwPZy4uTjecmf25uf+Zvfesry773tAxOv8vbgxGOP51v3XZLbvm//\naZ/9m9/+RN51jxutAdY7cXLlmPEbP/SXc/mlFz2x/M7D/zc/eeBwHn3MPzG3o9X9/rYf+LZ88viX\n81PvujePdnr+MLYxAqFjSa5Y835fkgdH+F4AYJu4aNeO067k7bxg0jWlfuzeccHEq5tPuXCM0zOA\n7euZF194Sv956ZN3bWFtOFf2PPXCPPylE1tdjW1ljGnnDyT5/mG2sRclecT4QQAAAADnrw0vQVXV\nryV5SZI9VXUsyU8m2ZUkrbVfSnIwySuSHE3ylSQ/sKjKAgAAAHD25pll7KYNPm9Jfni0GgEAAACw\nUGM8MgYAAADAEhEIAQAAAHRGIAQALFSbNQtwpzMEz9wmSdpGBQA6tFHfqO/cnibtV7t6HAIhAAAA\ngM4IhACAhauatGzCwo5MW/2+twoATFblGDk2gRAAAABAZwRCAAAAAJ0RCAEAAAB0RiAEAAAA0BmB\nEAAAAEvPTOTbk/26OAIhAGChZp3ItU5P89oGq93nVgGYTd/Iql7PH8YmEAIAFq4mTBTb+9Sxk7ZJ\nMn06egBWrO8nS8fZhUo5Ro5MIAQAAADQGYEQAAAAQGcEQgAAAACdEQgBAAAAdEYgBAAAANAZgRAA\nAABLr5mJfFuyXxdHIAQALFSbcSbX60ley+wV73W7AMykb2TgODkOgRAAsHg1YdGEZV2Zsv7V/YYB\nmG19P6nX7EOVc4exCYQAAAAAOiMQAgAAAOiMQAgAAACgMwIhAAAAgM4IhAAAAAA6IxACAABgGzAX\n+fZkvy6KQAgAWKhZp3Gt03O8jda7OfkFOM1q32jmcRwlxyEQAgAWbtLJe3V+Sj9t7fveKgCbVzrO\nLlQ5dxibQAgAAACgMwIhAAAAgM4IhAAAAAA6IxACAAAA6IxACAAAgKXX68yV2539ujgCIQAAAIDO\nCIQAgMWacWWvzfpwG9torV0NBTjdat9omnmaA+UoBEIAwMLVhLP33k/op65/59sFYLNKx9mFSnV/\n7jA2gRAAAABAZwRCAAAAAJ0RCAEAAAB0RiAEAAAA0Jm5AqGquq6qjlTV0aq6dcLnz6mq91XVR6rq\nnqp6xfhVBQAAgMnMO7U92a+Ls2EgVFU7krw5yfVJrklyU1Vds67YP0tyR2vtBUluTPLvxq4oAAAA\nAOOY5w6ha5Mcba3d31o7keT2JDesK9OSPG14fUmSB8erIgCwzGZd2Wu9XvbbYL173SwAs6z2jaaZ\nx3FyHDvnKHN5kgfWvD+W5NvXlXlDkvdU1Y8keUqSl45SOwBgW3Dqfrpp/6DxDx2AzSndZhfs5/HN\nc4fQpM2+PpC7KcnbWmv7krwiya9U1WnfXVU3V9Whqjp0/PjxzdcWAAAAgLM2TyB0LMkVa97vy+mP\nhL0myR1J0lr7QJInJdmz/otaa7e11va31vbv3bv3zGoMAAAAwFmZJxC6K8nVVXVVVe3OyqDRB9aV\n+cMk35UkVfXNWQmE3AIEAAAAcB7aMBBqrZ1MckuSO5Pcl5XZxA5X1Rur6pVDsZ9I8oNV9dEkv5bk\n77TW7TCRAAAAAOe1eQaVTmvtYJKD65a9fs3re5O8eNyqAQAAwHzckrA92a+LM88jYwAAZ2zWTcO9\nnuM1884DbNrq4cRsUwiJxiEQAgAAAOiMQAgAWLhJV3Or80u801a/880CsGm6zT5UnDuMTSAEAAAA\n0BmBEAAAAEBnBEIAAAAAnREIAQAAsPQ2nMGRpWS/Lo5ACAAAAKAzAiEAYKFmXddrnV7022i9XQ0F\nON1q32ieKWafXTAvgRAAAABAZwRCAMDCTbqa2/sV3pqyAXrfLgCbNa0/ZXupcowcm0AIAAAAoDMC\nIQAAAIDOCIQAAAAAOiMQAgAAYOn1OnPldme/Lo5ACAAAAKAzAiEAYKFmX9nr87LfRmvtaijA6Z7o\nG0011T3HyXEIhAAAAAA6IxACABau6vTLuRMWdaWmXOLufbsAbJ6Osw/lGDkygRAAAABAZwRCAAAA\nAJ0RCAEAAAB0RiAEAADA0jPz1PZkty6OQAgAAACgMwIhAGCh2oxre71ezW0brHinmwVgptW+cdos\njfTDcXIcAiEAAACAzgiEAICFm3Qttzq/wDtt/V35Btic3o8nvahyjBybQAgAAACgMwIhAAAAgM4I\nhAAAAAA6IxACAABg6c2a1ZLltdHMnJw5gRAAAABLwyDSMA6BEACwULMu7PV6zW+j9XY1FGACfSMD\nTWEcAiEAAACAzgiEAIDFm3B7f01aiEchADZJt9mHimPk2ARCAAAAAJ0RCAEAAAB0RiAEAADA0jPQ\nMGyOQAgAAACgMwIhAAAAloZxhWEcAiEAYKFm3cLfOr2/f6PV7nOrAMymb2RV0xpGMVcgVFXXVdWR\nqjpaVbdOKfO3qureqjpcVb86bjUBAAAAGMvOjQpU1Y4kb07y15McS3JXVR1ord27pszVSV6X5MWt\ntS9U1TMXVWEAYPnUhBv8q/N7/mvKBuh8swBs2rT+lO2latLZBGdjnjuErk1ytLV2f2vtRJLbk9yw\nrswPJnlza+0LSdJae2jcagIAAAAwlnkCocuTPLDm/bFh2VrfmOQbq+p/VdUHq+q6SV9UVTdX1aGq\nOnT8+PEzqzEAAAAAZ2WeQGjSXVnrR3DameTqJC9JclOS/1hVl572l1q7rbW2v7W2f+/evZutKwAA\nANCRTuefOCfmCYSOJblizft9SR6cUOa3WmuPttY+leRIVgIiAAAAAM4z8wRCdyW5uqquqqrdSW5M\ncmBdmf+a5DuTpKr2ZOURsvvHrCgAAAAYRBrGsWEg1Fo7meSWJHcmuS/JHa21w1X1xqp65VDsziSf\nq6p7k7wvyT9urX1uUZUGALaHXu8C32i93R4PcDp9I6u0hXFsOO18krTWDiY5uG7Z69e8bkl+fPgB\nAAAA4Dw2zyNjAABnZdLd/b3f8D91/T0KAbApes0+VBwixyYQAgAAAOiMQAgAAACgMwIhAAAAlp6B\nhren1u0UFIsnEAIAAGBpGEYGxiEQAgAAAOiMQAgAWKg24x7+bm/v73bFAc7crOMJfdEUxiEQAgAA\nAOiMQAgAWLiJ4z1U36NATFv9vrcKwOZ1fjjpxsp+trPHJBACAAAA6IxACAAAgKVnevLtyXhBiyMQ\nAgAAAOiMQAgAAIClYcwgGIdACAAAAKAzAiEAYKFmPfrf67AA86x3M2gCwCn0iqwyXtQ4BEIAAAAA\nnREIAQALN2m8h96HgJi2/sbGANgc/WYfKmVfj0wgBAAAANAZgRAAAABLz9Br25P9ujgCIQAAAIDO\nCIQAAABYGtX9KHQwDoEQAAAAQGcEQgDAQs169r91OjDAPKvd6aYBmEq/yCptYRwCIQAAAIDOCIQA\ngIWbNN5DdT4ERE3ZAMbGANgc/WYfqmJPj0wgBAAAANAZgRAAAABLz7Ay25P9ujgCIQAAAJaH54Zg\nFAIhAAAAgM4IhAAAAAA6IxACABaqefr/NPNsE1sN4FT6RRiXQAgAAACgMwIhAGDhasIAoL2PCTpt\n/SdtKwBm0G92oxwkRyUQAgAAYOm15qGy7ch+XRyBEAAAAEBnBEIAAAAsDU8NwTgEQgAAAACdEQgB\nAAAAdEYgBAAs1KyxIHsdJ3Ke9TaIJsCp9Ius0hTGIRACAAAA6MxcgVBVXVdVR6rqaFXdOqPcq6qq\nVdX+8aoIACy7SQOAVuejgk5b/b63CsDm6Tf7UGVfj23DQKiqdiR5c5Lrk1yT5KaqumZCuYuT/MMk\nHxq7kgAAADCLp4i2J/t1cea5Q+jaJEdba/e31k4kuT3JDRPK/VSSn0vy1RHrBwAAAMDI5gmELk/y\nwJr3x4ZlT6iqFyS5orX2rhHrBgAAAKfw2BCMY55AaNL/b0/ctVVVFyR5U5Kf2PCLqm6uqkNVdej4\n8ePz1xIAAACA0cwTCB1LcsWa9/uSPLjm/cVJnpfk/VX16SQvSnJg0sDSrbXbWmv7W2v79+7de+a1\nBgAAAOCMzRMI3ZXk6qq6qqp2J7kxyYHVD1trj7TW9rTWrmytXZnkg0le2Vo7tJAaAwBLZdZgkK3T\noSLbHKvd55YBgI31ev4wtg0DodbaySS3JLkzyX1J7mitHa6qN1bVKxddQQAAAADGtXOeQq21g0kO\nrlv2+illX3L21QIAtpfThyQ0KOjkLVA2DMCmlI6zC1XlGDmyeR4ZAwAAgPPaPI/jsoTs14URCAEA\nAAB0RiAEAADA0vCIGIxDIAQAAADQGYEQAAAAQGcEQgDAQs0a5LPXAUDnWe1etw3ANPpFVmkL4xAI\nAQAAAHRGIAQALNyk8T97HxN02vobLBVgc/Safag4dxibQAgAAIBtwHNE21GzXxdGIAQAAMDScJMI\njEMgBAAAANAZgRAAAABAZwRCAAAAAJ0RCAEACzZ9MMjW6TiRbY4VN4gmwKn0i6zSEsYhEAIAFm7S\nAKDV+bCgfa89wHhMRd6HKucOYxMIAQAAsPR6vet0u7NfF0cgBAAAANAZgRAAAABLwyNiMA6BEAAA\nAEBnBEIAAAAAnREIAQAAAHRGIAQALNSs2UFaTB0yjVlVAE6lX2RV0xhGIRACABZu4gCgnQ8KOm1Q\nVIOlAmxO9X5A6USluj93GJtACAAAgKXnnpHtyX5dHIEQAAAAQGcEQgAAACwNj4jBOARCAAAAAJ0R\nCAEAAAB0RiAEAAAA0BmBEACwULNmB2mdTh3S63oDnA1dJ6u0hXEIhACAhZs0AGjvQ4JOGxTVYKkA\nm1O6zS5UOXcYm0AIAACApefuy+3Jfl0cgRAAAABLwx1BMA6BEAAAAEBnBEIAAAAAnREIAQAAAHRG\nIAQAAADQGYEQALBQbcb0IL1OHNLmWHOzqgCcSr/IKm1hHAIhAGDhJs0I0/ssMdPWv/ftArBZq93m\nrAsQLK/ViyiVpBwkRyUQAgAAAOiMQAgAAACgM3MFQlV1XVUdqaqjVXXrhM9/vKrurap7quq/V9XX\nj19VAAAAAMawYSBUVTuSvDnJ9UmuSXJTVV2zrthHkuxvrX1rkncm+bmxKwoAAADAOOa5Q+jaJEdb\na/e31k4kuT3JDWsLtNbe11r7yvD2g0n2jVtNAAAAAMYyTyB0eZIH1rw/Niyb5jVJ3j3pg6q6uaoO\nVdWh48ePz19LAAAAAEYzTyA0aV63ifP5VdXfTrI/yc9P+ry1dltrbX9rbf/evXvnryUAsLRmTgLc\n6QzB88yM3HrdOABT6Bf5/7SFMeyco8yxJFeseb8vyYPrC1XVS5P80yR/tbX2tXGqBwBsB5OuLlUq\nPZ/Q1aSNksnbCoAZho6z3yPK9vbERZRyjBzbPHcI3ZXk6qq6qqp2J7kxyYG1BarqBUn+fZJXttYe\nGr+aAAAAAIxlw0CotXYyyS1J7kxyX5I7WmuHq+qNVfXKodjPJ3lqkl+vqrur6sCUrwMAAIAzNu0O\nS2Bz5nlkLK21g0kOrlv2+jWvXzpyvQAAAABYkHkeGQMAAABgGxEIAQAAAHRGIAQALNSsKdZ7nUJ4\nnrWeZ2p6gJ7oF1mlLYxDIAQAAADQGYEQALBwNWFKmN5nialM3gC9bxeAzVrtT901sj2t7tZKOUaO\nTCAEAADA0pgWqAObIxACAAAA6IxACAAAAKAzAiEAAACAzgiEAAAAADojEAIAFqrNmPal1xlhZm2T\nJ8qcg3oAwDJyjByHQAgAAICl18QE21OvV4/OAYEQALAlqvdZg6esv+mUATan++NJJ6ocI8cmEAIA\nAGBpCIBgHAIhAAAAgM4IhAAAAAA6IxACAAAA6IxACAAAAKAzAiEAYKFmTRbb60Sy86x3M80uwCn0\ni6zSFMYhEAIAAGD5CQm2Jbt1cQRCAMDCTZoiuNL3vMHT1t50ygCbo9vsQ8UxcmwCIQAAAJaGTADG\nIRACAAAA6IxACAAAAKAzAiEAAACAzgiEAAAAADojEAIAFmvGfLGtdTqZ7Byr3emWAZiq10MGp+v2\n/GFkAiEAAACWnohge5L9LI5ACABYuJowSXB1Pm9w9b4BAEaiP+1D1aSzCc6GQAgAAIClIQCCcQiE\nAAAAADojEAIAAADojEAIAAAAoDMCIQAAAIDOCIQAgIWaNVtsrzPJzrPeptkFONVG3aJ+c3tqE3as\nXT0OgRAAAABAZwRCAMDCmSH4dNM2iemUAWZb30vqNvtQT/yHsQiEAAAAADojEAIAAADojEAIAAAA\noDNzBUJVdV1VHamqo1V164TPL6yqdwyff6iqrhy7ogAAAACMY8NAqKp2JHlzkuuTXJPkpqq6Zl2x\n1yT5QmvtuUnelORnx64oAAAAAOPYOUeZa5Mcba3dnyRVdXuSG5Lcu6bMDUneMLx+Z5J/W1XVWmvT\nvvRPvvpo3nvvZ8+o0gDA8nj0scenfvbIV/o8H/jy105uWOb9Rx7Kk3fPc6oG0IdPHv/SzM8//Adf\nyJ8++tg5qg3nypHPfvG0ZYc+/fl88asbH0uZbZ6zjMuTPLDm/bEk3z6tTGvtZFU9kuQZSR5eW6iq\nbk5yc5LsftZz84NvP3SG1QYAlsnTnrTrtGWXXLQr/+P3H+72fOBpF00+DbvkopVt9aO3330uqwOw\nFC6+cOdp08yv9ptv+u1PbEGNOBd277ggF+664Il9/S/fY1+PoWbcxLNSoOp7kry8tfZ3h/ffl+Ta\n1tqPrClzeChzbHj/yaHM56Z977f8hRe0dxx8/9mvAQBwXqtKvvHrLs6uHac+qf6VEydz//Evb1Gt\ntt5zn/nUPGnXjtOWP/54yyce+mJOPjb7HA2gR8+8+MI882lPOm35px/+cr40x92XLKenP2V3/syl\nFyVJPvXwl+e607Znf37fpR9ure3fqNw8dwgdS3LFmvf7kjw4pcyxqtqZ5JIkn5/1pRft2pHnXX7J\nHL8eANiOnrx7p3OBCS64oPJNz3raVlcDYKlcuecpW10FzpGr7OvRzDPL2F1Jrq6qq6pqd5IbkxxY\nV+ZAklcPr1+V5HdmjR8EAAAAwNbZ8A6hYUygW5LcmWRHkre21g5X1RuTHGqtHUjyliS/UlVHs3Jn\n0I2LrDQAAAAAZ26uqStaaweTHFy37PVrXn81yfeMWzUAAAAAFmGeR8YAAAAA2EYEQgAAAACdEQgB\nAAAAdEYgBAAAANAZgRAAAABAZwRCAAAAAJ0RCAEAAAB0plprW/OLq76Y5MiW/HJ6sSfJw1tdCbYt\n7YtF08ZYNG2MRdK+WDRtjEVb5jb29a21vRsV2nkuajLFkdba/i38/WxzVXVIG2NRtC8WTRtj0bQx\nFkn7YtG0MRathzbmkTEAAACAzgiEAAAAADqzlYHQbVv4u+mDNsYiaV8smjbGomljLJL2xaJpYyza\ntm9jWzaoNAAAAABbwyNjAAAAAJ0RCAEAAAB0ZksCoaq6rqqOVNXRqrp1K+rAcqqqT1fVx6rq7qo6\nNCx7elW9t6p+f/jzsmF5VdUvDO3snqp64ZrvefVQ/ver6tVbtT5svap6a1U9VFUfX7NstDZVVX9x\naLNHh79b53YN2UpT2tcbquqPhn7s7qp6xZrPXje0lSNV9fI1yyceN6vqqqr60NDu3lFVu8/d2nE+\nqKorqup9VXVfVR2uqh8dluvHOGsz2pd+jFFU1ZOq6veq6qNDG/vnw/KJ7aKqLhzeHx0+v3LNd22q\n7dGHGW3sbVX1qTX92POH5X0dJ1tr5/QnyY4kn0zyZ5PsTvLRJNec63r4Wc6fJJ9Osmfdsp9Lcuvw\n+tYkPzu8fkWSdyepJC9K8qFh+dOT3D/8ednw+rKtXjc/W9amviPJC5N8fM2y0dpUkt9L8peGv/Pu\nJNdv9Tr72fL29YYk/2hC2WuGY+KFSa4ajpU7Zh03k9yR5Mbh9S8l+aGtXmc/57yNPTvJC4fXFyf5\nxNCW9GN+Ftm+9GN+xmpjleSpw+tdST409E0T20WSf5Dkl4bXNyZ5x/B6023PTx8/M9rY25K8akL5\nro6TW3GH0LVJjrbW7m+tnUhye5IbtqAebB83JPnl4fUvJ/kba5a/va34YJJLq+rZSV6e5L2ttc+3\n1r6Q5L1JrjvXleb80Fr73SSfX7d4lDY1fPa01toH2srR4u1rvosOTGlf09yQ5PbW2tdaa59KcjQr\nx8yJx83h6tNfS/LO4e+vbat0orX2mdba/x5efzHJfUkuj36MEcxoX9Pox9iUoS/60vB21/DTMr1d\nrO3b3pnku4Z2tKm2t+DV4jwyo41N09VxcisCocuTPLDm/bHMPrDAWi3Je6rqw1V187Ds61prn0lW\nTlySPHNYPq2taYNsZKw2dfnwev1yuGW4Dfmtq4/yZPPt6xlJ/ri1dnLdcjo1PDrxgqxc/dSPMap1\n7SvRjzGSqtpRVXcneSgr/8j+ZKa3iyfa0vD5I1lpR877mWp9G2utrfZj/2Lox95UVRcOy7o6Tm5F\nIDTpebpZCR2s9eLW2guTXJ/kh6vqO2aUndbWtEHO1GbblLbGJL+Y5BuSPD/JZ5L8q2G59sUZq6qn\nJvmNJD/WWvuTWUUnLNPOmGlC+9KPMZrW2mOttecn2ZeVO3q+eVKx4U9tjE1b38aq6nlJXpfkm5J8\nW1YeA3vtULyrNrYVgdCxJFeseb8vyYNbUA+WUGvtweHPh5L8ZlYOGp8dbtXL8OdDQ/FpbU0bZCNj\ntaljw+v1y+lYa+2zw4nJ40n+Q1b6sWTz7evhrNzGvHPdcjpTVbuy8o/1/9xa+y/DYv0Yo5jUvvRj\nLEJr7Y+TvD8r47ZMaxdPtKXh80uy8mi28342tKaNXTc8Ettaa19L8p9y5v3YUh8ntyIQuivJ1cPI\n8buzMhjYgS2oB0umqp5SVRevvk7ysiQfz0r7WR3l/dVJfmt4fSDJ9w8jxb8oySPDbfN3JnlZVV02\n3OL8smEZrBqlTQ2ffbGqXjQ83/79a76LTq3+I33w3Vnpx5KV9nXjMIPKVUmuzsoghROPm8Nz6u9L\n8qrh769tq3Ri6FvekuS+1tq/XvORfoyzNq196ccYS1XtrapLh9cXJXlpVsaqmtYu1vZtr0ryO0M7\n2lTbW/yacb6Y0sb+z5qLJpWVMX/W9mPdHCd3blxkXK21k1V1S1Y26I4kb22tHT7X9WApfV2S3xxm\n8duZ5Fdba/+tqu5KckdVvSbJHyb5nqH8wayMEn80yVeS/ECStNY+X1U/lZUDRJK8sbU276CvbDNV\n9WtJXpJkT1UdS/KTSX4m47WpH8rKLAYXZWXWgXcveJU4j0xpXy+plalNW1ZmTvx7SdJaO1xVdyS5\nN8nJJD/cWnts+J5px83XJrm9qn46yUey8g83+vLiJN+X5GPD+AhJ8k+iH2Mc09rXTfoxRvLsJL9c\nVTuycrPCHa21d1XVvZncLt6S5Feq6mhW7gy6MTnjtkcfprWx36mqvVl55OvuJH9/KN/VcbJWAlUA\nAAAAerEVj4wBAAAAsIUEQgAAAACdEQgBAAAAdEYgBAAAANAZgRAAAABAZwRCAAAAAJ0RCAEAAAB0\n5v8BsAAI13GTXMUAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1da9d322dd8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "foo = np.zeros(smtp.shape[0])\n",
+    "foo[smtp.iloc[:,-1]==\"neptune.\"] = 1\n",
+    "pd.Series(foo)[60000:].reset_index(drop=True).plot(figsize=(20,5))"
    ]
   },
   {
@@ -1585,7 +1619,9 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "space1 = pd.read_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/space/TEK00011.csv\",header=None)"
